2003-06-30  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mod2midi.c (Voice_SetVolume): converted linear volume
	  events to non-linear events, so that mods will sound correct
	  again

2003-06-30  skeishi(s_keishi@mutt.freemail.ne.jp>

	* interface/rtsyn.h,interface/rtsyn_common,
          /interface/rtsyn_wimm interface/rtsyn_portmidi: Changed 

	 BugFix  Realteime Synthesizer Engine.


2003-06-29  skeishi(s_keishi@mutt.freemail.ne.jp>

	* interface/portmidisyn_c,interface/rtsyn.h,interface/rtsyn_common,
	  interface/interface/rtsyn_wimm interface/rtsyn_portmidi: Added.
	* interface/winsyn_c.c, interface/w32g_syn.c,
	  timidity/timdity.c timidity/controls.c configure.in interface.h.in : Changed.
	  Add PortMIDI synthesizer mode.

2003-06-28  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Fix volume bug of drum instruments.

2003-06-26  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (reduce_voice_CPU): Bug fix (this is
	  obsolate yet)
	* timidity/playmidi.c (note_off): rx_note_off == 0 should only
	  ignore drum Note Off if the sample is not looped, otherwise the
	  note will get stuck

2003-06-24  mput <root@mput.dip.jp>

	* bootstrap.sh, autoconf/Makefile.boot : Deleted.
	* Makefile.am (M4DIR, ACLOCAL_AMFLAGS): Add.
	* configs/Makefile.am (EXTRA_DIST): To fit with Saito's changes
	* timidity/Makefile.am (EXTRA_timidity_SOURCES): To fit with
	  Saito's changes

2003-06-22  Saito <timidity@flashmail.com>

	* nouse, timw32g, timw32gd, twsyng, cfgforsf, ...:
	  Remove VC++ project files.
	* configs/VC++6.00ProjectFiles.zip:
	  Add VC++6.00ProjectFiles.zip.

2003-06-21  Saito <timidity@flashmail.com>

	* nouse, timw32g, timw32gd, twsyng, cfgforsf, ...:
	  Add VC++ project files to be able to compile Win32GUI interface.
	  Fix VC++ project files.
	* timidity/sndfont.c:
	  Fix for cfgforsf.

2003-06-17  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* interface/winsyn_c.c: To work under PortAudio