@@ -48,7 +48,7 @@ dnl SHCFLAGS	- Additional flags to compile shared object library.
 dnl		  (such as -fPIC)
 
 # This is a autoscan-generated configure.scan.
-AC_PREREQ(2.56)
+# AC_PREREQ(2.56)
 
 # "AC_INIT(timidity/timidity.c)" is obsolate yet.
 AC_INIT([TiMidity++],[2.12.0-pre1b],[root@mput.dip.jp],[TiMidity++])
@@ -1352,11 +1352,11 @@ CONFIG_INTERFACE(tcltk,TCLTK,k,
 
     tcl_lib=
     tk_lib=
-    for l in tcl tcl8.0jp tcl7.6jp tcl80jp tcl76jp tcl8.0 tcl7.6 tcl80 tcl76; do
+    for l in tcl tcl8.0jp tcl7.6jp tcl80jp tcl76jp tcl8.0 tcl7.6 tcl80 tcl76 tcl8.3 tcl8.4; do
       case "x$tcl_lib" in x) AC_CHECK_LIB($l,Tcl_Init,tcl_lib=-l$l);; esac
     done
     LIBS="$LIBS $tcl_lib"
-    for l in tk tk8.0jp tk4.2jp tk80jp tk42jp tk8.0 tk4.2 tk80 tk42; do
+    for l in tk tk8.0jp tk4.2jp tk80jp tk42jp tk8.0 tk4.2 tk80 tk42 tk8.3 tk8.4; do
       case "x$tk_lib" in x) AC_CHECK_LIB($l,Tk_Init,tk_lib=-l$l);; esac
     done
 
